--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.1",
+    "react-text-truncate": "^0.16.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
